# remote-stylus

./: Cargo.toml
.github/workflows/: check.yml
clients/ipados/: .gitignore  Cargo.toml  README.md  build.sh  identity.sample
clients/ipados/Remote Stylus.xcodeproj/: project.pbxproj
clients/ipados/Remote Stylus.xcodeproj/xcshareddata/xcschemes/: Remote Stylus.xcscheme
clients/ipados/bundle/: Info.plist
clients/ipados/src/: appdelegate.rs  appscenedelegate.rs  main.rs  remoteviewcontroller.rs  stylusview.rs
clients/windows/: Cargo.toml
clients/windows/src/: main.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  packets.rs  process.rs  protocol.rs
core/src/packets/: event.rs
core/src/process/: source.rs  target.rs
core/src/protocol/: event.rs
