[package]
name = "remotestylus-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
libremotestylus = { path = "../../core" }

[target.'cfg(target_os="windows")'.dependencies.windows]
version = "0.29.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
]