[package]
name = "remotestylus-windows"
version = "0.1.0"
edition = "2021"

[dependencies]
libremotestylus = { path = "../../core" }
crossbeam-channel = "0.5.2"

[target.'cfg(target_os="windows")'.dependencies.windows]
version = "0.29.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_Pointer",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_System_Threading",
]